--- a/04.component/index.html
+++ b/04.component/index.html
@@ -11,10 +11,14 @@
 
   <div id="root"></div>
   <div id="root2"></div>
+  <div id="root3"></div>
+  <div id="root4"></div>
+  <div id="root5"></div>
 
   <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
 
   <script type="text/babel">
 
@@ -43,6 +47,120 @@
       <MyClassComponent name="Bob" />,
       document.querySelector('#root2')
     );
+    //#endregion
+
+    //#region 1.3 组合组件
+    class MyContent extends React.Component {
+      render() {
+        return <p>{this.props.name} made some noise.</p>;
+      }
+    }
+
+    class MyApp extends React.Component {
+      render() {
+        return (
+          <div className="my-app">
+            <MyContent name="Cat" />
+            <MyContent name="Dog" />
+            <MyContent name="Bird" />
+          </div>
+        );
+      }
+    }
+
+    ReactDOM.render(
+      <MyApp />,
+      document.querySelector('#root3')
+    );
+    //#endregion
+
+    //#region 3 组件的 state
+    class MyStateDemo extends React.Component {
+      constructor(props) {
+        super(props);
+
+        // state
+        this.state = {
+          local: 'China',
+          date: moment().format(this.props.format)
+        };
+
+      }
+
+      // React 渲染函数
+      render() {
+        return (
+          <div>
+            <button onClick={this.getNow.bind(this)}>GET NOW</button>
+            <p>{this.state.local} time now: {this.state.date}</p>
+          </div>
+        );
+      }
+
+      // 点击按钮时获取当前时间
+      getNow() {
+        this.setState({
+          date: moment().format(this.props.format)
+        });
+      }
+
+    }
+
+    ReactDOM.render(
+      <MyStateDemo format="YYYY/MM/DD hh:mm:ss" />,
+      document.querySelector('#root4')
+    );
+    //#endregion
+
+    //#region 3 组件的生命周期
+    class MyLifecycleDemo extends React.Component {
+      constructor(props) {
+        super(props);
+
+        // state
+        this.state = {
+          local: 'China',
+          date: moment().format(this.props.format)
+        };
+
+      }
+
+      // 组件挂载完毕
+      componentDidMount() {
+        // 设置定时器
+        this.timer = setInterval(
+          () => this.getNow(),
+          1000
+        );
+      }
+
+      // 组件卸载前
+      componentWillUnmount() {
+        // 清除定时器
+        clearInterval(this.timer);
+      }
+
+      // React 渲染函数
+      render() {
+        return (
+          <p>{this.state.local} time now: {this.state.date}</p>
+        );
+      }
+
+      // 更新当前时间
+      getNow() {
+        this.setState({
+          date: moment().format(this.props.format)
+        });
+      }
+
+    }
+
+    ReactDOM.render(
+      <MyLifecycleDemo format="YYYY/MM/DD hh:mm:ss" />,
+      document.querySelector('#root5')
+    );
+    
     //#endregion
 
   </script>
